--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,17 @@
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
   %body
+    %header
+      %nav
+        - if user_signed_in?
+          = link_to "edit profile", edit_user_registration_path
+          = link_to "log out", destroy_user_session_path, method: :delete 
+          %p
+            \ ✉️
+            = current_user.email
+        - else
+          = link_to "sign up", new_user_registration_path
+          = link_to "log in", new_user_session_path
     %p.notice
       = notice
     %p.alert
