--- a/app/views/companies/new.html.haml
+++ b/app/views/companies/new.html.haml
@@ -1,2 +1,8 @@
 %h1 Companies#new
 %p Find me in app/views/companies/new.html.haml
+= simple_form_for(@company) do |f|
+  = f.error_notification
+  .form-inputs
+    = f.input :name
+  .form-actions
+    = f.button :submit
