:sparkles: Select category for expense

--- a/app/views/expenses/new.html.haml
+++ b/app/views/expenses/new.html.haml
@@ -4,5 +4,6 @@
   = f.error_notification
   .form-inputs
     = f.input :title
+    = f.input :category, Expense.categories
   .form-actions
     = f.button :submit
