:art: Add bootstrap

--- a/app/views/expenses/_expense.html.haml
+++ b/app/views/expenses/_expense.html.haml
@@ -1,2 +1,7 @@
 - expenses.each do |expense|
-  %li= link_to expense.title, expense_path(expense.id)
+  %div
+    %div.panel.panel-default
+      %div.panel-heading= link_to expense.title, expense_path(expense.id)
+      %div.panel-body
+        %h3= expense.user.name
+        %span.label.label-default= expense.category_i18n
