--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,2 +1,6 @@
+%div.page-header
+  %h1 NEW 経費
 = link_to "新たに経費精算！", new_expense_path, class: "btn btn-default btn-lg"
+%div.page-header
+  %h1 YOUR 経費
 = render "expenses/expense", expenses: @expenses
