:art: Reusable _expense
他の場所でも使えるように引数を変更した

--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -1,3 +1,4 @@
 %div.page-header
   %h1 ALL 経費
-= render "expenses/expense", expenses: @expenses
+- @expenses.each do |expense|
+  = render "expenses/expense", expense: expense
