--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -3,4 +3,5 @@
 = link_to "新たに経費精算！", new_expense_path, class: "btn btn-default btn-lg"
 %div.page-header
   %h1 YOUR 経費
-= render "expenses/expense", expenses: @expenses
+- @expenses.each do |expense|
+  = render "expenses/expense", expense: expense
