--- a/app/views/expenses/_expense.html.haml
+++ b/app/views/expenses/_expense.html.haml
@@ -9,6 +9,6 @@
       - elsif expense.status == :rejected
         %h3= "😒却下😒"
       - else
-        %h3= "🤔エラーを投げるようにする！"
+        %h3= "TODO: 🤔エラーを投げるようにする！"
       %h3= expense.user.name
       %span.label.label-default= expense.category_i18n
