:sparkles: Redirect and show message after approve/reject
approve/rejectに成功/失敗した場合にredirectし、メッセージを表示するようにしました
* ブラウザ上で承認ボタンをおした後に戻るボタンを押したときに、実際とはことなるstatusが表示されるなどの問題を防ぐため
* リダイレクト後に、成功・失敗のメッセージを表示して処理をわかりやすくしました

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -33,10 +33,6 @@
                     %li= link_to "sign up", new_user_registration_path
                     %li= link_to "log in", new_user_session_path
         %main.col-sm-9.col-lg-10
-          - if notice
-            %p.alert.alert-success
-              = notice
-          - if alert
-            %p.alert.alert-danger
-              = alert
+          - flash.each do |type, message|
+            %div{class: "alert alert-#{type}"}= message
           = yield
