--- a/app/views/expenses/_expense.html.haml
+++ b/app/views/expenses/_expense.html.haml
@@ -1,14 +1,23 @@
-%div
+%div.expense
   %div.panel.panel-default
-    %div.panel-heading= link_to expense.title, expense_path(expense.id)
     %div.panel-body
-      - if expense.status == :pending
-        %h3= "🙂承認待ち🙂"
-      - elsif expense.status == :approved
-        %h3= "😄承認済み😄"
-      - elsif expense.status == :rejected
-        %h3= "😒却下😒"
-      - else
-        %h3= "TODO: 🤔エラーを投げるようにする！"
-      %h3= expense.user.name
-      %span.label.label-default= expense.category_i18n
+      %div.media
+        %div.media-left
+          = image_tag current_user.gravatar_url, class: "img-circle gravatar"
+        %div.media-body
+          %div.title
+            %h3= link_to expense.title, expense_path(expense.id)
+          %div.details
+            %div
+              %span.glyphicon.glyphicon-user
+                = current_user.name
+              %span.glyphicon.glyphicon-calendar
+                = expense.created_at.strftime("%Y-%m-%d")
+              %span.glyphicon.glyphicon-time
+                = time_ago_in_words(expense.created_at)
+            %div.price
+              %span.glyphicon.glyphicon-yen
+                1000
+              %span.status= I18n.t(expense.status, scope: "models.expense.status")
+            %div.category
+              %span.label-category= expense.category_i18n
