--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -201,11 +201,6 @@
       margin: 12px;
     }
 
-    .price {
-      color: $gray-darker;
-      font-weight: 700;
-    }
-
     .category {
       margin: 24px 0;
       font-size: 16px;
@@ -216,6 +211,14 @@
         border-radius: 5em;
         padding: 12px 16px;
       }
+    }
+  }
+
+  .price {
+    span {
+      color: $gray-darker;
+      font-size: 24px;
+      font-weight: 700;
     }
   }
 }
