--- a/app/views/companies/new.html.haml
+++ b/app/views/companies/new.html.haml
@@ -1,8 +1,8 @@
-%h1 Companies#new
-%p Find me in app/views/companies/new.html.haml
+%div.page-header
+  %h1 事業所登録
 = simple_form_for(@company) do |f|
   = f.error_notification
   .form-inputs
-    = f.input :name
+    = f.input :name, label: "事業所名"
   .form-actions
-    = f.button :submit
+    = f.button :submit, "登録する", class: "btn-lg btn-primary"
