--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -1,4 +1,18 @@
 %div.page-header
   %h1 ALL 経費
+%div.filters
+  TODO フィルターを実装する
+  %button.btn.btn-primary.btn-sm= "未対応"
+  %button.btn.btn-primary.btn-sm= "承認済"
+  %button.btn.btn-primary.btn-sm= "却下済"
+  - if current_user.admin?
+    %span.dropdown
+      %a.dropdown-toggle{:href => "#", "role" => "button", "data-toggle" => "dropdown", "data-target" => "#", class: "btn btn-primary btn-sm"}
+        人物でフィルター
+        %b.caret
+      %ul.dropdown-menu{"role" => "menu"}
+        - current_user.company.users.each do |user|
+          %li
+            =link_to user.name, "#"
 - @expenses.each do |expense|
   = render "expenses/expense", expense: expense
