--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,7 +1,13 @@
+- if current_user.admin?
+  %div.page-header
+    %h1 今月の経費まとめ
+  %div
+    %h1 TODO
+    経費の月ごとの情報を表示する
 %div.page-header
-  %h1 NEW 経費
+  %h2 NEW 経費
 = link_to "新たに経費精算！", new_expense_path, class: "btn btn-default btn-lg"
 %div.page-header
-  %h1 YOUR 経費
+  %h2 YOUR 経費
 - @expenses.each do |expense|
   = render "expenses/expense", expense: expense
