--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -192,7 +192,7 @@
   color: $gray;
 
   .panel {
-    border-left: solid 5px $gray-lighter;
+    border-left: solid 5px $gray-light;
   }
 
   .gravatar {
@@ -258,6 +258,24 @@
   .price {
     span {
       color: $brand-success;
+    }
+  }
+}
+
+.expense-retrieved {
+  .panel {
+    border-left-color: $gray-lighter;
+  }
+  .details {
+    .title {
+      text-decoration: line-through;
+    }
+  }
+
+  .price{
+    span {
+      color: $gray-lighter;
+      text-decoration: line-through;
     }
   }
 }
