:art: Fix ja.yml to show status on expense
Expense#statusの値をほかのviewで使うために修正しました

--- a/app/views/expenses/_expense.html.haml
+++ b/app/views/expenses/_expense.html.haml
@@ -26,4 +26,4 @@
                 %span.glyphicon.glyphicon-yen
                   1000
                   / #TODO
-                %p.status= I18n.t(expense.status, scope: "models.expense.status")
+                %p.status= "#{I18n.t(expense.status, scope: "models.expense.status")}済"
