--- a/app/views/expenses/new.html.haml
+++ b/app/views/expenses/new.html.haml
@@ -6,6 +6,7 @@
       = f.error_notification
       .form-inputs
         = f.input :title, label: "申請内容"
+        = f.input :purpose, label: "目的"
         %div
           = f.input :paid_at, label: "支払い日"
           = f.input :paid_to, label: "支払先"
