:memo: Remove "済" to correnct sentence
"未対応済"と表示されていたため削除！

--- a/app/views/expenses/_expense.html.haml
+++ b/app/views/expenses/_expense.html.haml
@@ -28,4 +28,4 @@
               %div.price
                 %span.glyphicon.glyphicon-yen
                   = expense.amount
-                %p.status= "#{I18n.t(expense.status, scope: "models.expense.status")}済"
+                %p.status= "#{I18n.t(expense.status, scope: "models.expense.status")}"
