:art: Light color for retrieved expenses
取り消し済みの申請は色を薄くしました
薄すぎると思うので後で調整します

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -263,7 +263,14 @@
 }
 
 .expense-retrieved {
+  // FIXME
+  color: $gray-lighter;
+
   .panel {
+    a {
+      color: $gray-lighter;
+      text-decoration: line-through;
+    }
     border-left-color: $gray-lighter;
   }
   .details {
