:art: Reword "却下済み" on authority
管理者の場合、却下にする
従業員の場合、自分の経費しか見られないので、却下ではなく取り消し済みと表記する

--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -3,8 +3,8 @@
 %div.filters
   %button.btn.btn-sm= link_to "未対応", controller: "expenses", action: "index", status: :pending
   %button.btn.btn-sm= link_to "承認済", controller: "expenses", action: "index", status: :approved
-  %button.btn.btn-sm= link_to "却下済", controller: "expenses", action: "index", status: :rejected
   - if current_user.admin?
+    %button.btn.btn-sm= link_to "却下済", controller: "expenses", action: "index", status: :rejected
     %span.dropdown
       %a.dropdown-toggle{:href => "#", "role" => "button", "data-toggle" => "dropdown", "data-target" => "#", class: "btn btn-primary btn-sm"}
         人物でフィルター
@@ -13,6 +13,8 @@
         - current_user.company.users.each do |user|
           %li
             =link_to user.name, controller: "expenses", action: "index", user: user
+  - else
+    %button.btn.btn-sm= link_to "取り消し済", controller: "expenses", action: "index", status: :rejected
 - @expenses.each do |expense|
   = render "expenses/expense", expense: expense
 = paginate @expenses
