--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -6,6 +6,8 @@
     %span #{current_user.company.expenses.approved.sum(:amount)}円
     %h2 未承認の経費合計額
     %span #{current_user.company.expenses.pending.sum(:amount)}円
+    %h2 カテゴリー比率
+    = pie_chart current_user.company.expenses.group(:category).sum(:amount)
 %div.page-header
   %h2 NEW 経費
 = link_to "新たに経費精算！", new_expense_path, class: "btn btn-default btn-lg"
