--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,11 +1,12 @@
 - if current_user.admin?
   %div.page-header
     %h1 今月の経費まとめ
+    = link_to "詳細", pages_show_path, class: "btn btn-lg"
   %div
     %h2 💸承認済みの経費合計額
-    %span #{current_user.company.expenses.approved.sum(:amount)}円
+    %span #{current_user.company.expenses.this_month.approved.sum(:amount)}円
     %h2 未承認の経費合計額
-    %span #{current_user.company.expenses.pending.sum(:amount)}円
+    %span #{current_user.company.expenses.this_month.pending.sum(:amount)}円
     %h2 カテゴリーごとの経費提出数
     = column_chart @count_by_category
     %h2 カテゴリーごとの承認済み経費
