:recycle: Give page params after setting up query
クエリ生成中にpageを挟んでいたのを修正

--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -17,4 +17,4 @@
     %button.btn.btn-sm= link_to "取り消し済", controller: "expenses", action: "index", status: :rejected
 - @expenses.each do |expense|
   = render "expenses/expense", expense: expense
-= paginate @expenses
+= paginate @expenses.page(params[:page])
