:recycle: Add scope :retrieved to expense
expense#statusとscopeがずれていた
rejectedだけでretrievedとrejectedだけを表現するとあとから混乱するので、それぞれ定義して#statusに合わせる！

--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -3,8 +3,9 @@
 %div.filters
   %button.btn.btn-sm= link_to "未対応", controller: "expenses", action: "index", status: :pending
   %button.btn.btn-sm= link_to "承認済", controller: "expenses", action: "index", status: :approved
+  %button.btn.btn-sm= link_to "却下済", controller: "expenses", action: "index", status: :rejected
+  %button.btn.btn-sm= link_to "取り消し済", controller: "expenses", action: "index", status: :retrieved
   - if current_user.admin?
-    %button.btn.btn-sm= link_to "却下済", controller: "expenses", action: "index", status: :rejected
     %span.dropdown
       %a.dropdown-toggle{:href => "#", "role" => "button", "data-toggle" => "dropdown", "data-target" => "#", class: "btn btn-primary btn-sm"}
         人物でフィルター
