--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -1,6 +1,7 @@
 %div.page-header
   %h1 ALL 経費
 %div.filters
+  %button.btn.btn-sm= link_to "すべて", controller: "expenses", action: "index"
   %button.btn.btn-sm= link_to "未対応", controller: "expenses", action: "index", status: :pending
   %button.btn.btn-sm= link_to "承認済", controller: "expenses", action: "index", status: :approved
   %button.btn.btn-sm= link_to "却下済", controller: "expenses", action: "index", status: :rejected
