:art: Change graphs of toppage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -340,3 +340,11 @@
 div.filters {
   margin-bottom: 20px;
 }
+
+// page#index
+.summary {
+  h2 {
+    font-size: 1em;
+    font-weight: 700;
+  }
+}
