--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -1,12 +1,32 @@
 - if current_user.admin?
   %div.page-header
-    %h1 #{Time.zone.now.strftime("%Y年%m月")}の経費まとめ
-  %div
-    %h2 💸承認済みの経費合計額
-    %span #{current_user.company.expenses.this_month.approved.sum(:amount)}円
-    %h2 未承認の経費合計額
-    %span #{current_user.company.expenses.this_month.pending.sum(:amount)}円
-    %h2 カテゴリーごとの経費提出数
-    = column_chart @count_by_category
-    %h2 カテゴリーごとの承認済み経費
-    = pie_chart @pie_chart
+    %h1 今月の経費まとめ
+  %div.panel.panel-primary.summary
+    %div.panel-heading
+      %div.panel-title
+        = "今日 #{Time.zone.now.strftime("%Y年%m月%d日")}まで"
+    %div.panel-body
+      %div.row
+        %div.col-lg-4
+          %h2 📄 申請済み経費の合計額
+          %p #{current_user.company.expenses.this_month.sum(:amount)}円
+        %div.col-lg-4
+          %h2 💸 承認済みの経費合計額
+          %p #{current_user.company.expenses.this_month.approved.sum(:amount)}円
+        %div.col-lg-4
+          %h2 💰 未承認の経費合計額
+          %p #{current_user.company.expenses.this_month.pending.sum(:amount)}円
+    %ul.list-group
+      %li.list-group-item
+        %div.row
+          %div.col-lg-6
+            %h2 📊 カテゴリ別申請額合計
+            = pie_chart @amount_by_category
+          %div.col-lg-6
+            %h2 📊 カテゴリ別申請数
+            = column_chart @number_of_category
+      %li.list-group-item
+        %div.row
+          %div.col-lg-12
+            %h2 📊 先月との比較
+            = column_chart [{name: "先月", data: @amount_by_category_last_month},{name: "今月", data: @amount_by_category}]
