--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -222,12 +222,6 @@
         border-radius: 5em;
         padding: 12px 16px;
       }
-
-      .label-comment {
-        border: solid 1px;
-        border-radius: 5em;
-        padding: 12px 16px;
-      }
     }
   }
 
@@ -239,6 +233,10 @@
       font-size: 24px;
       font-weight: 700;
     }
+  }
+
+  .comment {
+    padding: 5px;
   }
 }
 
