--- a/app/views/expenses/edit.html.haml
+++ b/app/views/expenses/edit.html.haml
@@ -1,10 +1,16 @@
 %div.page-header
-  %h1 コメントする
+  %h1 承認・却下する
 = render "expenses/expense", expense: @expense
 %div.col-md-5
   = simple_form_for(@expense) do |f|
     = f.error_notification
     .form-inputs
+      %label.radio-inline
+        %input{ type: "radio", name: "expense[status]", id: "inlineRadio1", value: "approve" }
+        承認
+      %label.radio-inline
+        %input{ type: "radio", name: "expense[status]", id: "inlineRadio2", value: "reject" }
+        却下
       = f.input :comment, label: "コメント"
     .form-actions
-      = f.button :submit, "コメントする", class: "btn-lg btn-primary"
+      = f.button :submit, "送信！", class: "btn-lg btn-primary"
