--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -346,3 +346,13 @@ div.filters {
     font-weight: 700;
   }
 }
+
+div.js-expense-panel {
+  background: #fff;
+  cursor: pointer;
+  transition: all  0.3s ease;
+
+  &:hover, &:focus {
+    background: #e5e5e5;
+  }
+}
