--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -356,3 +356,50 @@ div.js-expense-panel {
     background: #e5e5e5;
   }
 }
+
+.balloon {
+  width: 100%;
+  margin: 1.5em 0;
+  overflow: hidden;
+
+  .faceicon {
+    float: left;
+    margin-right: -90px;
+    width: 80px;
+  }
+
+  .faceicon img{
+    width: 100%;
+    height: auto;
+    border: solid 3px #d7ebfe;
+    border-radius: 50%;
+  }
+
+  .chatting {
+    width: 100%;
+  }
+}
+
+.says {
+    display: inline-block;
+    position: relative;
+    margin: 5px 0 0 105px;
+    padding: 17px 13px;
+    border-radius: 12px;
+    background: #d7ebfe;
+
+  &:after {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    top: 18px;
+    left: -24px;
+    border: 12px solid transparent;
+    border-right: 12px solid #d7ebfe;
+  }
+
+  p {
+    margin: 0;
+    padding: 0;
+  }
+}
