--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,7 +31,7 @@
                   - if current_user.admin?
                     %li= link_to "今月の経費情報", pages_show_path
                   %li= link_to "経費申請する", new_expense_path
-                  %li= link_to "経費一覧", expenses_path
+                  %li= link_to "経費一覧", expenses_path(status: :pending)
                   %li= link_to "プロフィール", edit_user_registration_path
                   %li= link_to "ログアウト", destroy_user_session_path, method: :delete
                 - else
