--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -12,15 +12,15 @@
       = link_to "却下済", expenses_path(status: :rejected)
     %li{role:"presentation", class: ("active" if params[:status] == 'retrieved' )}
       = link_to "取り消し済", expenses_path(status: :retrieved)
-  - if current_user.admin?
-    %span.dropdown
-      %a.dropdown-toggle{:href => "#", "role" => "button", "data-toggle" => "dropdown", "data-target" => "#", class: "btn btn-primary btn-sm"}
-        人物でフィルター
-        %b.caret
-      %ul.dropdown-menu{"role" => "menu"}
-        - current_user.company.users.each do |user|
-          %li
-            =link_to user.name, controller: "expenses", action: "index", user: user
+    - if current_user.admin?
+      %li.dropdown
+        %a.dropdown-toggle{:href => "#", "role" => "button", "data-toggle" => "dropdown", "data-target" => "#", class: "btn btn-primary btn-sm"}
+          人物でフィルター
+          %b.caret
+        %ul.dropdown-menu{"role" => "menu"}
+          - current_user.company.users.each do |user|
+            %li
+              =link_to user.name, controller: "expenses", action: "index", user: user
 - @expenses.each do |expense|
   - if expense.status == :pending
     = render "expenses/expense", expense: expense, url: edit_expense_path(expense)
