:shower: Remove div
Because div doesnt have specific meaning!
https://github.com/kufu/kehi/pull/37#discussion_r162267005

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -347,7 +347,7 @@ div.filters {
   }
 }
 
-div.js-expense-panel {
+.js-expense-panel {
   background: #fff;
   cursor: pointer;
   transition: all  0.3s ease;
