--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -9,13 +9,13 @@
       %div.row
         %div.col-lg-4
           %h2 📄 申請済み経費の合計額
-          %p #{@company_expenses.this_month.sum(:amount)}円
+          %p #{number_with_delimiter(@company_expenses.this_month.sum(:amount), delimiter: ",")}円
         %div.col-lg-4
           %h2 💸 承認済みの経費合計額
-          %p #{@company_expenses.this_month.approved.sum(:amount)}円
+          %p #{number_with_delimiter(@company_expenses.this_month.approved.sum(:amount), delimiter: ",")}円
         %div.col-lg-4
           %h2 💰 未承認の経費合計額
-          %p #{@company_expenses.this_month.pending.sum(:amount)}円
+          %p #{number_with_delimiter(@company_expenses.this_month.pending.sum(:amount), delimiter: ",")}円
     %ul.list-group
       %li.list-group-item
         %div.row
