:art: Show all pagination button
pagination用のボタンは常にすべて表示する
最初のページ・最後のページになったらクリックできないようにする

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -403,3 +403,11 @@ div.filters {
     padding: 0;
   }
 }
+
+// pagination
+.pagination {
+  .disabled {
+    pointer-events: none;
+    color: $gray-lighter;
+  }
+}
