--- a/app/views/kaminari/_first_page.html.haml
+++ b/app/views/kaminari/_first_page.html.haml
@@ -1,2 +1,3 @@
+- unclickable = true if current_page.first?
 %li
-  = link_to_unless current_page.first?, raw(t 'views.pagination.first'), url, :remote => remote
+  = link_to raw(t 'views.pagination.first'), url, :remote => remote, class: ("disabled" if unclickable)
