--- a/app/views/kaminari/_last_page.html.haml
+++ b/app/views/kaminari/_last_page.html.haml
@@ -1,2 +1,3 @@
+- unclickable = true if current_page.last?
 %li
-  = link_to_unless current_page.last?, raw(t 'views.pagination.last'), url, {:remote => remote}
+  = link_to raw(t 'views.pagination.last'), url, :remote => remote, class: ("disabled" if unclickable)
