--- a/app/views/kaminari/_prev_page.html.haml
+++ b/app/views/kaminari/_prev_page.html.haml
@@ -1,2 +1,3 @@
+- unclickable = true if current_page.first?
 %li
-  = link_to_unless current_page.first?, raw(t 'views.pagination.previous'), url, :rel => 'prev', :remote => remote
+  = link_to raw(t 'views.pagination.previous'), url, :rel => 'prev', :remote => remote, class: ("disabled" if unclickable)
