:art: Show alert message
Bootstrap3のクラスがDeviseとずれていたので無理やり合わせる

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -39,6 +39,5 @@
                   %li= link_to "ログイン", new_user_session_path
         %main.col-sm-9.col-lg-10
           .container
-            - flash.each do |type, message|
-              %div{class: "alert alert-#{type}"}= message
+            = render "layouts/alert_message"
             = yield
