--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,26 +1,31 @@
-%div.page-header
-  %h1 ユーザー登録
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :name
-    %br/
-    = f.text_field :name, autofocus: true
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+%h1.text-center
+  = image_tag "logo.png", class: "logo"
+%div.container.login
+  %div.panel.panel-default
+    %div.panel-body
+      %div.form-vertical
+      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+        = devise_error_messages!
+        %div.form-group
+          = f.label :name, "お名前"
+          %br/
+          = f.text_field :name, autofocus: true, class: "form-control"
+        %div.form-group
+          = f.label :email, "メールアドレス"
+          %br/
+          = f.email_field :email, autofocus: true, class: "form-control"
+        %div.form-group
+          = f.label :password, "パスワード"
+          - if @minimum_password_length
+            %em
+              (#{@minimum_password_length} 文字以上)
+          %br/
+          = f.password_field :password, autocomplete: "off", class: "form-control"
+        %div.form-group
+          = f.label :password_confirmation, "確認のためパスワードの再入力"
+          %br/
+          = f.password_field :password_confirmation, autocomplete: "off", class: "form-control"
+        .actions
+          = f.submit "新規ユーザー登録する", class: "btn btn-block btn-primary"
+  = render "devise/shared/links"
+  = link_to "Logo from LogoMakr.com", "http://logomakr.com"
