:bug: Show expense user gravatar
current_userのgravatarを表示していたから修正！

--- a/app/views/expenses/_expense.html.haml
+++ b/app/views/expenses/_expense.html.haml
@@ -6,7 +6,7 @@
     %div.panel-body{ class: ('js-expense-panel' if clickable), data: { 'detail-url': url } }
       %div.media
         %div.media-left
-          = image_tag current_user.gravatar_url, class: "img-circle gravatar"
+          = image_tag expense.user.gravatar_url, class: "img-circle gravatar"
         %div.media-body
           %div.row
             %div.details.col-md-8
