--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,19 +14,11 @@
           %nav.navbar.navbar-default.navbar-fixed-side
             %div.container
               %div.navbar-header
-                %div= link_to "KEHI", root_url, class: "navbar-brand"
               %ul.nav.navbar-nav
                 - if user_signed_in?
                   %div.collapse.navbar-collapse.navbar-profile
-                    = link_to edit_user_registration_path do
-                      = image_tag current_user.gravatar_url, class: "img-circle gravatar centered"
-                    %div
-                      = link_to edit_user_registration_path do
-                        = current_user.name
-                      - if current_user.admin
-                        %span.label.label-info admin
-                    - if current_user.company
-                      %span= current_user.company.name
+                    = link_to root_url do
+                      = image_tag "logo.png", class: "logo navbar-brand"
                   %li= link_to "ホーム", root_url
                   - if current_user.admin?
                     %li= link_to "今月の経費情報", pages_show_path
@@ -37,6 +29,11 @@
                 - else
                   %li= link_to "サインアップ", new_user_registration_path
                   %li= link_to "ログイン", new_user_session_path
+                  %li
+                    = link_to edit_user_registration_path do
+                      = current_user.name
+                    - if current_user.admin
+                      %span.label.label-info admin
         %main.col-sm-9.col-lg-10
           .container
             = render "layouts/alert_message"
